--- a/main.css
+++ b/main.css
@@ -1,18 +1,54 @@
+body,
+body * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+        sans-serif;
+}
+
 header,
 main,
 footer {
+    display: flex;
     width: 800px;
-    margin-left: calc((100% - 800px) / 2);
+    margin: 30px calc((100% - 800px) / 2);
 }
 
 header {
-    background-color: papayawhip;
+    justify-content: space-between;
+    align-items: center;
+}
+
+img {
+    height: 30px;
+    width: 200px;
+    object-fit: contain;
+    object-position: center left;
+}
+
+nav {
+    display: flex;
+    gap: 30px;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+}
+a:hover {
+    color: #55337a;
+    text-decoration: underline;
 }
 
 main {
-    background-color: azure;
+    background-color: lightcoral;
 }
 
 footer {
-    background-color: beige;
+    background-color: lightgoldenrodyellow;
 }
