--- a/main.css
+++ b/main.css
@@ -14,16 +14,17 @@ header,
 main,
 footer {
     display: flex;
-    width: 800px;
-    margin: 30px calc((100% - 800px) / 2);
+    justify-content: space-between;
+    align-items: center;
+    width: 900px;
+    margin: 30px calc((100% - 900px) / 2);
 }
 
 header {
-    justify-content: space-between;
     align-items: center;
 }
 
-img {
+header > img {
     height: 30px;
     width: 200px;
     object-fit: contain;
@@ -35,18 +36,59 @@ nav {
     gap: 30px;
 }
 
-a {
+nav > a {
     color: black;
     text-decoration: none;
     font-size: 18px;
 }
-a:hover {
+nav > a:hover {
     color: #55337a;
     text-decoration: underline;
 }
 
 main {
-    background-color: lightcoral;
+}
+
+main > div {
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+    width: 40%;
+}
+
+h1 {
+
+}
+
+p {
+
+}
+
+div > div {
+    display: flex;
+    gap: 20px;
+}
+
+div > a {
+    padding: 18px 45px;
+    display: inline-block;
+    background-color: #55337a;
+    color: white;
+    text-transform: uppercase;
+    font-size: 18px;
+    text-decoration: none;
+    border-radius: 40px;
+    border: 2px solid #55337a;
+    user-select: none;
+}
+
+div > a:hover {
+    background-color: white;
+    color: #55337a;
+}
+
+main > image {
+    width: 55%;
 }
 
 footer {
