--- a/main.css
+++ b/main.css
@@ -66,19 +66,22 @@ p {
 
 div > div {
     display: flex;
-    gap: 20px;
+    flex-wrap: wrap;
+    font-size: 18px; /* 18px = 1em
+    */
+    gap: 1em;
 }
 
 div > a {
-    padding: 18px 45px;
+    padding: 1em 2.5em;
     display: inline-block;
     background-color: #55337a;
     color: white;
     text-transform: uppercase;
-    font-size: 18px;
+    line-height: 1em;
     text-decoration: none;
-    border-radius: 40px;
-    border: 2px solid #55337a;
+    border-radius: 1.6em;
+    border: 0.1em solid #55337a;
     user-select: none;
 }
 
