--- a/css/main.css
+++ b/css/main.css
@@ -10,9 +10,7 @@ body {
         sans-serif;
 }
 
-header,
-main,
-footer {
+.container {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -20,51 +18,58 @@ footer {
     margin: 30px calc((100% - 900px) / 2);
 }
 
-header {
-    align-items: center;
-}
-
-header > img {
+.logo {
     height: 30px;
     width: 200px;
     object-fit: contain;
     object-position: center left;
 }
 
-nav {
+.main-nav {
     display: flex;
     gap: 30px;
 }
 
-nav > a {
+.link {
     color: black;
     text-decoration: none;
     font-size: 18px;
 }
-nav > a:hover {
+.link:hover {
     color: #55337a;
     text-decoration: underline;
 }
 
-main {
-}
-
-main > div {
+.left-column {
     display: flex;
-    gap: 20px;
+    gap: 30px;
     flex-direction: column;
     width: 40%;
 }
 
-h1 {
-
+.main-title {
+    font-size: 40px;
 }
 
-p {
-
+.main-title > span {
+    font-weight: normal;
+    display: block;
 }
 
-div > div {
+.main-title::after {
+    content:'';
+    display: block;
+    width: 90px;
+    height: 5px;
+    margin-top: 10px;
+    background-color: #55337a;
+}
+
+.description {
+    color: #555;
+}
+
+.button-group {
     display: flex;
     flex-wrap: wrap;
     font-size: 18px; /* 18px = 1em
@@ -72,7 +77,7 @@ div > div {
     gap: 1em;
 }
 
-div > a {
+.button {
     padding: 1em 2.5em;
     display: inline-block;
     background-color: #55337a;
@@ -85,15 +90,19 @@ div > a {
     user-select: none;
 }
 
-div > a:hover {
+.button:hover {
     background-color: white;
     color: #55337a;
 }
 
-main > image {
+.right-column {
     width: 55%;
 }
 
-footer {
-    background-color: lightgoldenrodyellow;
+.socials {
+    color: lightgrey;
+}
+
+.copyright {
+    color: #555
 }
